--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.0",
-    "twilio": "^5.4.3"
+    "twilio": "^5.4.3",
+    "uuid": "^11.1.0"
   }
 }
