--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "migrate": "node --experimental-specifier-resolution=node ./node_modules/.bin/sequelize db:migrate",
+    "migrate:undo": "node --experimental-specifier-resolution=node ./node_modules/.bin/sequelize db:migrate:undo",
+    "migrate:prod": "NODE_ENV=production npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
+    "seed:undo": "npx sequelize-cli db:seed:undo:all"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +19,22 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5",
+    "mysql2": "^3.14.1",
     "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6",
+    "sequelize": "^6.37.7",
+    "stripe": "^18.1.0",
     "twilio": "^5.4.3",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
